# pkg/controller/devicetypes.go
@@ -18,33 +18,14 @@ package controller
 
 import (
 	"fmt"
-	"github.com/SENERGY-Platform/device-repository/lib/client"
-	"github.com/SENERGY-Platform/device-selection/pkg/model"
-	"github.com/SENERGY-Platform/device-selection/pkg/model/devicemodel"
-	"github.com/SENERGY-Platform/models/go/models"
 	"net/http"
 	"runtime/debug"
 	"sort"
+
+	"github.com/SENERGY-Platform/device-repository/v2/lib/client"
+	"github.com/SENERGY-Platform/device-selection/pkg/model"
+	"github.com/SENERGY-Platform/models/go/models"
 )
-
-func (this *Controller) getCachedDeviceType(token string, id string, cache *map[string]devicemodel.DeviceType) (result devicemodel.DeviceType, err error) {
-	if cache != nil {
-		if cacheResult, ok := (*cache)[id]; ok {
-			return cacheResult, nil
-		}
-	}
-	result, err, _ = this.devicerepo.ReadDeviceType(id, token)
-	if err != nil {
-		debug.PrintStack()
-		return result, err
-	}
-
-	if cache != nil {
-		(*cache)[id] = result
-	}
-
-	return result, err
-}
 
 func (this *Controller) GetFilteredDeviceTypes(token string, criteria []client.FilterCriteria) (result []models.DeviceType, err error, code int) {
 	return this.getCachedFilteredDeviceTypes(token, criteria, nil)
@@ -81,17 +62,6 @@ func (this *Controller) getCachedFilteredDeviceTypes(token string, criteria []cl
 	return result, err, code
 }
 
-func (this *Controller) getOnlyDeviceTypesIncludingIdModifier(token string) (result []devicemodel.DeviceType, err error, code int) {
-	result, _, err, code = this.devicerepo.ListDeviceTypesV3(token, client.DeviceTypeListOptions{
-		Limit:            9999,
-		Offset:           0,
-		SortBy:           "name.asc",
-		IncludeModified:  true,
-		IgnoreUnmodified: true,
-	})
-	return
-}
-
 func hashCriteriaAndSet(criteria model.FilterCriteriaAndSet) string {
 	arr := append(model.FilterCriteriaAndSet{}, criteria...) //make copy to prevent sorting to effect original
 	sort.SliceStable(arr, func(i, j int) bool {
@@ -107,24 +77,4 @@ func hashClientCriteriaList(criteria []client.FilterCriteria) string {
 		return fmt.Sprint(arr[i]) < fmt.Sprint(arr[j])
 	})
 	return fmt.Sprint(arr)
-}
-
-func (this *Controller) getCachedDevice(token string, id string, cache *map[string]devicemodel.Device) (result devicemodel.Device, err error, code int) {
-	if cache != nil {
-		if cacheResult, ok := (*cache)[id]; ok {
-			return cacheResult, nil, http.StatusOK
-		}
-	}
-
-	result, err, code = this.devicerepo.ReadDevice(id, token, client.READ)
-	if err != nil {
-		debug.PrintStack()
-		return result, err, code
-	}
-
-	if cache != nil {
-		(*cache)[id] = result
-	}
-
-	return result, nil, http.StatusOK
 }
